# sigul

./: .gitignore  AUTHORS  ChangeLog  FIXME  Makefile.am  NEWS  README  README.txt  TODO  ToDo  client.py  configure.ac  dbschema_v10_to_v11.sql  dev.cfg  devdata.sqlite  init.py  keydefs  runtests.sh  sample-prod.cfg  setup.py  signserv.pidaproject  signserv.sec  signserv.spec  signstuff.py  sigul.spec  start-signserv.py  start-sigul.py  xmlrpcserver.py
.devcontainer/: Dockerfile  devcontainer.json
admin/: .gitignore
config/: bridge.conf  client.conf  server.conf
doc/: data-design.txt  protocol-design.txt  sign-many.py  sigul.1.in  sigul_bridge.8.in  sigul_server.8.in  sigul_server_add_admin.8.in  sigul_server_create_db.8.in  sigul_setup_client.1
signserv/: controllers.py  json.py  model.py  release.py
signserv/config/: app.cfg
signserv/tests/: test_controllers.py  test_model.py
sigul/: controllers.py  model.py
sigul.egg-info/: PKG-INFO  SOURCES.txt  sqlobject.txt  top_level.txt
sigul/config/: app.cfg
sigul/tests/: test_model.py
src/: bind_methods.py  bridge.py  client.py  double_tls.py  errors.py  script.in  server.py  server_add_admin.py  server_common.py  server_create_db.py  server_gpg.py  settings.py.in  sigul-ostree-helper.c  sigul_setup_client  utils.py
tests/: Dockerfile  analysis.at  basic.at  bound-passphrase-keyring.at  bound-passphrase-tpm.at  bound-passphrase.at  ca.at  compile-tools.at  containers.at  decrypt.at  encrypted-armored.asc  encrypted-raw.asc  encrypted-unknown.asc  encrypted-wrongkey.asc  expired-key.asc  file-signing.at  hugefiles.at  imported-public-key.asc  imported-secret-key.asc  include_cleanup.at  include_importedkey.at  include_setup.at  include_start.at  incontainer_run.sh  key-expiration.at  koji.client.conf  koji.data.sql  koji.httpd.conf  koji.hub.conf  koji.wsgi  kojikrb5.at  new-key-substitute.asc  ostree.at  pesign.at  shimaa64.efi  sign-rpms-head-signing.at  sign-rpms.at  strict-usernames.at  testrpm.spec  testsuite.at  (+1 more)
testtools/: Cargo.toml
testtools/src/: extract_ima_signatures.rs
