[package]
name = "testtools"
version = "0.1.0"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "extract_ima_signatures"
path = "src/extract_ima_signatures.rs"

[dependencies]
hex = "0.4.2"
rpm-rs = { git = "https://github.com/puiterwijk/rpm-rs.git", rev = "cef074887ede6ad1cf06b9b4128cfbd7787a7ab5" }
